[GTK] Fix some video/canvas tests that should be passing https://bugs.webkit.org/show_bug.cgi?id=160023

Patch by Miguel Gomez <magomez@igalia.com> on 2016-07-27
Reviewed by Carlos Garcia Campos.

Tools:

Add a platform identifier to the TestRunner's page user agent when the tests are run on the
EFL or GTK platforms.

* WebKitTestRunner/efl/TestControllerEfl.cpp:
(WTR::TestController::platformConfigureViewForTest):
* WebKitTestRunner/gtk/TestControllerGtk.cpp:
(WTR::TestController::platformConfigureViewForTest):

LayoutTests:

Modify the tests to use a tolerance of 6 when running on the GTK or EFL platforms. Also,
added new expectations for the tests that need them.

* fast/canvas/canvas-createPattern-video-loading.html:
* fast/canvas/canvas-createPattern-video-modify.html:
* media/video-canvas-createPattern.html:
* platform/efl/fast/canvas/canvas-createPattern-video-loading-expected.txt: Added.
* platform/efl/fast/canvas/canvas-createPattern-video-modify-expected.txt: Added.
* platform/gtk/fast/canvas/canvas-createPattern-video-loading-expected.txt: Added.
* platform/gtk/fast/canvas/canvas-createPattern-video-modify-expected.txt: Added.
* resources/platform-helper.js: Added.
(isGtk):
(isEfl):
(videoCanvasPixelComparisonTolerance):

Canonical link: https://commits.webkit.org/178405@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203777 268f45cc-cd09-0410-ab3c-d52691b4dbfc