LayoutTests/resources/platform-helper.js
@@ -1,0 +1,17 @@
+function isGtk()
+{
+    return navigator.userAgent.includes("WebKitTestRunnerGTK");
+}
+
+function isEfl()
+{
+    return navigator.userAgent.includes("WebKitTestRunnerEFL");
+}
+
+function videoCanvasPixelComparisonTolerance()
+{
+    if (isGtk() || isEfl())
+        return 6;
+
+    return 2;
+}
